# mas

./: .gitignore  README.md  pyproject.toml
examples/: run_multiagent_collab.py  run_research_demo.py
outputs/: collab_results_1781360918.json  collab_results_1781360940.json
src/mas_framework/: __init__.py  agents.py  consensus.py  memory.py  models.py  orchestrator.py  proposal_tools.py  tools.py
src/mas_framework/configs/: prompts.yml  skills.yml
src/mas_framework/prompts/: system_prompt.md  verify_prompt.md
src/mas_framework/skills/: Memory_Proposal_Skill.md  SKILL.md  memory_proposal_workflow.md
src/mas_framework/utils/: config_handler.py  loader.py  memory_proposal_tool.py  path_tool.py
tests/: test_distributed_consensus_simulation.py  test_memory_and_consensus.py
